--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,12 +5,23 @@ permalink: /talks/
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
-
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
-
-{% endif %}
-
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+## PRESENTATIONS [\* co-author]: ####
+- Department of Accountancy and Finance Seminar Series *(University of Otago, 2019)*
+- \[Synthesis\] One Planet Sovereign Wealth Funds Research Forum *(Paris, 2020)*\*
+- The 1st CEFGroup Climate Finance Symposium *(University of Otago, 2020)*
+- The 4th GRASFI-INSPIRE-NGFS Research Webinar *(NGFS & Online, 2021)*
+- The International Review of Financial Analysis Special Issue Conference: Globally Sustainable Banking & Finance: in support of evidence based policy making *(Belfast & Online, 2021)*\*
+- Tsinghua PBCSF Green Finance Lectures *(Tsinghua University & Online, 2022)*\*
+- Sustainable Finance and Investment Seminar *(Stanford University & Online, 2022)* 
+- The 25th Annual New Zealand Finance Colloquium *(University of Waikato, 2021)*
+- The 3rd JRC Summer School on Sustainable Finance *(European Commission - Joint Research Centre & Online, 2021)*
+- The 4th Annual GRASFI Conference *(International Institute of Green Finance & Central University of Finance and Economics & Online,  2021)*
+- The International Review of Financial Analysis Special Issue Conference: Globally Sustainable Banking & Finance: in support of evidence based policy making *(Belfast & Online, 2021)*
+- The Green Finance Research Advances Conference *(Louis Bachelier Institute & Banque de France & Online, 2021)*
+- GRASFI 2019 Conference *(University of Oxford, 2019)* - **shortlisted for the Union Bank of Switzerland (UBS) Innovative Methods Prize**
+- GIS @ Otago Symposium *(University of Otago, 2019)* 
+- The Planning Team *(Dunedin City Council, 2019)* 
+- The 12th OERC Energy & Climate Change Symposium *(University of Otago, 2018)*   
+- \[Synthesis\] One Planet Sovereign Wealth Funds Research Forum *(Paris, 2020)*\*
+- Department of Accountancy and Finance Seminar Series *(University of Otago, 2020)*
+- GRASFI 2019 Conference *(University of Oxford, 2019)* - **shortlisted for the Union Bank of Switzerland (UBS) Innovative Methods Prize**
