--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,6 +5,7 @@ permalink: /talks/
 author_profile: true
 ---
 
+{% include base_path %}
 ## PRESENTATIONS [\* co-author]: ####
 - Department of Accountancy and Finance Seminar Series *(University of Otago, 2019)*
 - \[Synthesis\] One Planet Sovereign Wealth Funds Research Forum *(Paris, 2020)*\*
