--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 {% include base_path %}
-## PRESENTATIONS [\* co-author]: ####
+[\* co-author]
 - Department of Accountancy and Finance Seminar Series *(University of Otago, 2019)*
 - \[Synthesis\] One Planet Sovereign Wealth Funds Research Forum *(Paris, 2020)*\*
 - The 1st CEFGroup Climate Finance Symposium *(University of Otago, 2020)*
